# rust-blog

./: .env  .env.test  Cargo.toml
backend/: .env  Cargo.toml  diesel.toml
backend/migrations/2023-05-15-105459_init_db/: down.sql  up.sql
backend/src/: config.rs  db.rs  lib.rs  logs.rs  main.rs  schema.rs
backend/src/modules/users/: mod.rs  model.rs  routes.rs  service.rs  tests.rs  users_service.rs
docker/: docker-compose.yaml
frontend/: .gitignore  Cargo.toml  Trunk.toml
frontend/src/: main.rs
migrations/2023-05-15-105459_init_db/: up.sql
models/: Cargo.toml
models/src/: schema.rs  users.rs
src/: database.rs  db.rs  handlers.rs  logs.rs  main.rs  models.rs  tests.rs
src/modules/: mod.rs  users.rs
src/modules/users/: mod.rs  routes.rs
