[workspace]

members = [
    "backend",
    "frontend",
    "models"
]

[workspace.dependencies]
diesel = { version = "2.1.0", default-features = false, features = ["postgres", "r2d2", "chrono", "uuid"] }
uuid = { version = "=0.8.2", features = ["serde", "v4"] }
derive_more = "0.99.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"