[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", default-features = false, features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2.1.0"
postgres = "0.19.5"
tokio = "1.28.1"
tokio-postgres = "0.7.8"
actix-web = "4.3.1"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
dotenv = "0.15.0"
futures = "0.3.1"
r2d2 = "0.8.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-service = "2.0.2"
alcoholic_jwt = "4091.0.0"
reqwest = "0.11.17"
actix-rt = "2.8.0"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
env_logger = "0.10.0"
log = "0.4.17"
lazy_static = "1.4.0"
runtime_injector_actix = "0.2.0"
async-trait = "0.1.68"
ctor = "0.2.0"
uuid = { version = "1.3.3", features = ["serde", "v4", "v7"] }
aspect = "0.3.0"
wrap = "0.1.0"